# self-balancing-robot

./: .codacy.yaml  .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.gradle  gradle.properties  sdkconfig.defaults  settings.gradle
include/: event.hpp  (+9 more)
robot-embedded-firmware/src/: CMakeLists.txt  LQRController.cpp  LQRController.hpp  STSServoDriver.cpp  attitude_sensor.c  battery.c  battery.cpp  battery.hpp  ble.c  ble_gatt_server.c  ble_gatt_server.h  idf_component.yml  lqr_controller.cpp  lqr_controller.hpp  main.cpp  robot.cpp  servos.cpp  stack_monitor.cpp  wifi.c
robot-embedded-firmware/src/ble/: ble.c  ble_err.c  error.c  gap.c  gatt_svc.c  heart_rate_mock.c  led.c  log.c  log_service.c  server.c
robot-embedded-firmware/src/controller/: ble_server.c  ble_server.h  error.c
robot-embedded-firmware/src/esp/: adc.cpp  gpio.cpp  io.cpp  misc.c  misc.cpp  serial.cpp
robot-embedded-firmware/src/foc/: HybridStepperMotor.h  StepperMotor.cpp
robot-embedded-firmware/src/foc/angle_sensor/: as5048a.cpp  as5048a.h  as5600.h
robot-embedded-firmware/src/foc/common/: lowpass_filter.cpp  lowpass_filter.h  pid.h  time_utils.c  time_utils.cpp  time_utils.h
robot-embedded-firmware/src/foc/common/base_classes/: CurrentSense.cpp  CurrentSense.h  FOCMotor.cpp  FOCMotor.h  Sensor.cpp  Sensor.h
robot-embedded-firmware/src/foc/communication/: Commander.h  SimpleFOCDebug.cpp  StepDirListener.h
robot-embedded-firmware/src/foc/current_sense/: InlineCurrentSense.cpp  InlineCurrentSense.h  hardware_api.h
robot-embedded-firmware/src/foc/current_sense/hardware_specific/: atmega_mcu.cpp
robot-embedded-firmware/src/foc/current_sense/hardware_specific/esp32/: esp32_adc_driver.h  esp32_mcu.h
robot-embedded-firmware/src/foc/current_sense/hardware_specific/rp2040/: rp2040_mcu.cpp
robot-embedded-firmware/src/foc/current_sense/hardware_specific/samd/: samd_mcu.cpp
robot-embedded-firmware/src/foc/current_sense/hardware_specific/stm32/: stm32_adc_utils.cpp  stm32_adc_utils.h  stm32_mcu.cpp
robot-embedded-firmware/src/foc/current_sense/hardware_specific/teensy/: teensy4_mcu.cpp  teensy4_mcu.h
robot-embedded-firmware/src/foc/drivers/: BLDCDriver3PWM.cpp  BLDCDriver6PWM.cpp  BLDCDriver6PWM.h  StepperDriver2PWM.cpp  StepperDriver2PWM.h  StepperDriver4PWM.cpp  StepperDriver4PWM.h
robot-embedded-firmware/src/foc/drivers/hardware_specific/: generic_mcu.cpp  nrf52_mcu.cpp  portenta_h7_mcu.cpp
robot-embedded-firmware/src/foc/drivers/hardware_specific/atmega/: atmega2560_mcu.cpp  atmega32u4_mcu.cpp
robot-embedded-firmware/src/foc/drivers/hardware_specific/esp32/: esp32_mcpwm_mcu.cpp  mcpwm_private.h
robot-embedded-firmware/src/foc/drivers/hardware_specific/rp2040/: rp2040_mcu.cpp  rp2040_mcu.h
robot-embedded-firmware/src/foc/drivers/hardware_specific/samd/: samd21_mcu.cpp  samd_mcu.cpp
robot-embedded-firmware/src/foc/drivers/hardware_specific/stm32/: stm32_mcu.cpp  stm32_timerutils.cpp
robot-embedded-firmware/src/foc/drivers/hardware_specific/teensy/: teensy_mcu.h
robot-embedded-firmware/src/foc/sensors/: Encoder.cpp  Encoder.h  HallSensor.h  MagneticSensorAnalog.cpp  MagneticSensorI2C.cpp  MagneticSensorI2C.h  MagneticSensorPWM.cpp  MagneticSensorSPI.h
robot-embedded-firmware/src/protocol/: buffer.c  buffer_stream.c  error.c  format.c  message.c  parser.c
robot-embedded-firmware/src/protocol/message/: status_report.c
robot-embedded-firmware/src/robot/: airborne_detector.c  attitude_to_suspended_adapter.c  error.c  error_string.c  fused_airborne_detector.c  leg.cpp  log_system.c  main_suspended_detection.c  main_with_mpu6050_suspended.c  motor_airborne_detector.c  multi_sensor_suspended.c  robot_airborne_control.c  stats.c  suspended_control.c  sustained_airborne.c
src/: AttitudeSensor.cpp  CMakeLists.txt  Kconfig.projbuild  LQRController.cpp  STSServoDriver.cpp  STSServoDriver.hpp  battery.c  battery.cpp  battery.h  idf_component.yml  main.c  main.cc  main.cpp  mpu6050.c  mpu6050.cpp  robot.cpp  servos.cpp  wifi.c
src/esp/: gpio.cpp  io.cpp  misc.cpp  serial.cpp
src/foc/: BLDCMotor.cpp  BLDCMotor.h  HybridStepperMotor.cpp  SimpleFOC.h  StepperMotor.h
src/foc/angle_sensor/: as5600.cpp  as5600.h  mt6701.cpp  mt6701.h
src/foc/common/: foc_utils.cpp  foc_utils.h  lowpass_filter.h  pid.cpp  pid.h  time_utils.cpp
src/foc/common/base_classes/: BLDCDriver.h  FOCDriver.h  FOCMotor.cpp  FOCMotor.h  Sensor.h  StepperDriver.h
src/foc/communication/: Commander.cpp  Commander.h  SimpleFOCDebug.h  StepDirListener.cpp  commands.h
src/foc/current_sense/: GenericCurrentSense.cpp  GenericCurrentSense.h  LowsideCurrentSense.cpp  LowsideCurrentSense.h
src/foc/current_sense/hardware_specific/: due_mcu.cpp  generic_mcu.cpp
src/foc/current_sense/hardware_specific/esp32/: esp32_adc_driver.cpp  esp32_adc_driver.h  esp32_mcpwm_mcu.cpp  esp32_mcu.cpp  esp32_mcu.h
src/foc/current_sense/hardware_specific/rp2040/: rp2040_mcu.h
src/foc/current_sense/hardware_specific/samd/: samd21_mcu.cpp  samd21_mcu.h
src/foc/current_sense/hardware_specific/stm32/: stm32_mcu.h
src/foc/current_sense/hardware_specific/teensy/: teensy_mcu.cpp
src/foc/drivers/: BLDCDriver3PWM.h  hardware_api.h
src/foc/drivers/hardware_specific/: due_mcu.cpp  esp8266_mcu.cpp
src/foc/drivers/hardware_specific/atmega/: atmega328_mcu.cpp
src/foc/drivers/hardware_specific/esp32/: esp32_driver_mcpwm.cpp  esp32_driver_mcpwm.h  esp32_ledc_mcu.cpp  esp32_mcpwm_mcu.cpp  mcpwm_private.h
src/foc/drivers/hardware_specific/renesas/: renesas.cpp  renesas.h
src/foc/drivers/hardware_specific/samd/: samd51_mcu.cpp  samd_mcu.h
src/foc/drivers/hardware_specific/stm32/: stm32_mcu.h  stm32_searchtimers.cpp  stm32_searchtimers.h  stm32_timerutils.h
src/foc/drivers/hardware_specific/teensy/: teensy3_mcu.cpp  teensy4_mcu.cpp  teensy4_mcu.h  teensy_mcu.cpp
src/foc/sensors/: Encoder.cpp  Encoder.h  GenericSensor.cpp  GenericSensor.h  HallSensor.cpp  HallSensor.h  MagneticSensorAnalog.h  MagneticSensorI2C.cpp  MagneticSensorI2C.h  MagneticSensorPWM.h  MagneticSensorSPI.cpp
(+251 files in other folders)
